# thinking_agent_with_mcp

./: .env.example  .gitignore  README.md  REFLECTION.md  REFLECTION_STAGE3.md  mcp_agent_log.db  pyproject.toml
agent_client/: pyproject.toml
agent_client/src/agent_client/: client.py  log_store.py  logging_config.py
analysis_dashboard/: pyproject.toml
analysis_dashboard/src/analysis_dashboard/: analysis_agent.py  analytics_tools.py  app.py  neo4j_tools.py  retrieval_tools.py  settings.py
mcp_server/: pyproject.toml
mcp_server/src/mcp_server/: server.py
