[project]
name = "agent-client"
version = "0.1.0"
description = "LangChain AI Agent acting as MCP Client with dual-stream logging"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.3.4",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.scripts]
start-agent = "agent_client.client:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_client"]