[project]
name = "analysis-dashboard"
version = "0.3.0"
description = "Decoupled Log Analysis Agent, Neo4j KG mapping, and Streamlit Dashboard"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-huggingface>=0.0.3",
    "sentence-transformers>=3.0.0",
    "langchain-neo4j>=0.1.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "neo4j>=5.0.0",
    "streamlit>=1.35.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "langchain-groq>=0.1.0",
]

[project.scripts]
start-dashboard = "analysis_dashboard.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/analysis_dashboard"]