[project]
name = "mcp-server"
version = "0.1.0"
description = "FastMCP Server with Reflection Tool and Hierarchical CRAG Resource"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.3.4",
    "langchain-tavily>=0.1.0",
    "langchain-text-splitters>=0.3.0",
    "langchain-community>=0.3.0",
    "sentence-transformers>=3.0.0",
    "chromadb>=0.5.3",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.29.0",
]
 
[project.scripts]
start-server = "mcp_server.server:main"
 
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
 
[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server"]